# backend/src/main/java/at/idling/idli/ExportMetricDto.java
@@ -1,0 +1,6 @@
+package at.idling.idli;
+
+import jakarta.validation.constraints.NotBlank;
+
+public record ExportMetricDto(@NotBlank String name, @NotBlank String canonicalUnit) {
+}
